Made fonts in menu on mobile bigger and fixed activer border width

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,11 +74,13 @@ h6, .h6 {
 
 .site-wrapper {
   background-color: #42413d;
+
 }
 
 .cover-container {
   height: 100%;
   min-height: 100vh;
+  width: 100%;
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
@@ -117,6 +119,7 @@ margin: auto;
   color: #fff;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
+
 }
 
 .nav-masthead .nav-link:hover,
@@ -128,7 +131,7 @@ margin: auto;
   margin-left: 1rem;
 }
 
-.nav-masthead .active {
+.nav-masthead .active  {
   color: #ffce2b;
   border-bottom-color: #ffce2b;
 }
@@ -156,6 +159,25 @@ margin: auto;
   .mastfoot,
   .cover-container {
     width: 55rem;
+  }
+}
+
+@media (max-width: 720px) {
+  .masthead,
+  .mastfoot,
+  .cover-container {
+    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+    margin: auto;
+  }
+
+  .nav-masthead{
+    font-size: 1.15rem;
+  }
+
+  .navbar-nav {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
 }
 
